<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="156dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="422dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonchonanh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chonanh" />

        <TextView
            android:id="@+id/tvtenphim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tenphim" />

        <EditText
            android:id="@+id/tenphim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvtheloai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theloai" />

        <Spinner
            android:id="@+id/theloai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/theloai" />

        <TextView
            android:id="@+id/tvngayphathanh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ngayphathanh" />

        <EditText
            android:id="@+id/ngayphathanh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openPickerDate"
            android:text="01/01/2018"
            android:inputType="date"
            android:focusable="false"/>

        <TextView
            android:id="@+id/tvmota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mota" />

        <EditText
            android:id="@+id/mota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openPickerDate"
            android:ems="10"
            android:inputType="text"/>

        <Button
            android:id="@+id/buttontaophim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taophim" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>