<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:id="@+id/imgFilm"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:padding="5dp"
            android:src="@drawable/ic_defaultmv" />

        <Button
            android:id="@+id/btnChonAnh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_shape_btn"
            android:lineSpacingExtra="10sp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/chonanh"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/tenphim"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/round_shape_txt"
            android:ems="10"
            android:inputType="text|textCapSentences"
            android:padding="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="18dp"
            android:text="" />

        <TextView
            android:id="@+id/tvtheloai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/theloai"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/genre_sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/round_shape_txt"
            android:entries="@array/theloai"
            android:padding="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" />

        <TextView
            android:id="@+id/tvreleaseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/ngayphathanh"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/releaseDate_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/round_shape_txt"
            android:focusable="false"
            android:inputType="date"
            android:onClick="openPickerDate"
            android:padding="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="18dp"
            android:text="01/01/2018" />

        <TextView
            android:id="@+id/tvcontent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/mota"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/content_ed"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_shape_txt"
            android:ems="10"
            android:gravity="start"
            android:inputType="textCapSentences|textMultiLine|text"
            android:lineSpacingExtra="10sp"
            android:maxLength="2000"
            android:maxLines="8"
            android:padding="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="18dp"
            android:scrollHorizontally="false"
            android:scrollbars="vertical"
            android:singleLine="true"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_shape_btn"
            android:lineSpacingExtra="10sp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/taophim"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>