<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:id="@+id/layout_signin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textColor="@color/colorPrimary"
      android:gravity="center"
      android:padding="5dp"
      android:text="ĐĂNG NHẬP"
      android:textSize="40sp" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_vertical"
      android:orientation="horizontal"
      android:padding="5dp">

      <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_mail" />

      <EditText
        android:id="@+id/email_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/round_shape_txt"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_vertical"
      android:orientation="horizontal"
      android:padding="5dp">

      <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_password" />

      <EditText
        android:id="@+id/password_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/round_shape_txt"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />
    </LinearLayout>

    <LinearLayout
      android:id="@+id/resetpassword"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="right"
      android:padding="5dp"
      tools:ignore="RtlHardcoded">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="Đặt lại mật khẩu"
        android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
      android:id="@+id/btn_lin"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="horizontal"
      android:weightSum="2">

      <Button
        android:id="@+id/btnSignup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="@drawable/round_shape_btn"
        android:lineSpacingExtra="10sp"
        android:text="@string/btnSignup"
        android:textColor="@color/white"
        android:textSize="18sp" />

      <Button
        android:id="@+id/btnSignin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="@drawable/round_shape_btn"
        android:lineSpacingExtra="10sp"
        android:text="@string/btnSignin"
        android:textColor="@color/white"
        android:textSize="18sp" />
    </LinearLayout>
  </LinearLayout>
</ScrollView>